--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -144,6 +144,7 @@
 	"menu-movie-remove": "Remove", 
 	"menu-movie-player": "Open in player", 
 	"menu-movie-navigation": "Navigation sequences", 
+	"menu-movie-republish": "Republish movie files", 
 	"menu-movie-notes": "Design notes", 
 	
 	"window-login-title": "Login", 
@@ -380,6 +381,7 @@
 	"window-movieprop-access": "Access", 
 	"window-movieprop-accessbt": "Set access options", 
 	"window-movieprop-accesslogin": "Require visitor login?",
+	"window-movieprop-encrypted": "Encrypt movie files?",
 	"window-movieprop-accessyes": "yes",
 	"window-movieprop-accessno": "no",
 	"window-movieprop-accessgroup": "Allowed visitor groups (ctrl+click to unselect/select several, none for free access)",
@@ -436,6 +438,14 @@
 	"window-movieseq-nolist": "Error while recovering the scenes list.",
 	"window-movieseq-error": "Error while creating the navigation sequence.",
 	"window-movieseq-created": "The navigation sequence was created.",
+	
+	"window-republish-title": "Republish movie files", 
+	"window-republish-about": "You can republish all your movie files if needed. Choose which version of the scenes to consider.", 
+	"window-republish-current": "use currently published scene versions", 
+	"window-republish-newest": "use the latest versions of scenes", 
+	"window-republish-button": "Republish movie files",
+	"window-republish-error": "Error while replublishing the movie files.", 
+	"window-republish-ok": "All movie files were replublished.", 
 	
 	"menu-scene-title": "Scene", 
 	"menu-scene-new": "New", 
@@ -836,6 +846,8 @@
 	"window-contrinterf-smap": "Animation setting (optional)", 
 	"window-contrinterf-smapac": "Animation click action (optional)", 
 	"window-contrinterf-formelposition": "Element position (relative to interface origin)", 
+	"window-contrinterf-formelrotation": "Element rotation (pivot on top-left corner)", 
+	"window-contrinterf-formelalpha": "Element opacity", 
 	"window-contrinterf-text": "Interface text (optional)", 
 	"window-contrinterf-use": "Use text interface?", 
 	"window-contrinterf-font": "Text font", 
@@ -992,7 +1004,7 @@
 	"window-exchdesk-width": "Window original width",
 	"window-exchdesk-height": "Window original height",
 	"window-exchdesk-aboutnw": "The desktop applications are created using Electron JS.",
-	"window-exchdesk-buttonnw": "Visit the Elecntron JS site",
+	"window-exchdesk-buttonnw": "Visit the Electron JS site",
 	"window-exchdesk-icon": "App icon file (set at the movie properties)", 
 	"window-exchdesk-author": "App author (set at the movie properties)", 
 	"window-exchdesk-description": "App description (set at the movie properties)", 
