--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -144,6 +144,7 @@
 	"menu-movie-remove": "Remove", 
 	"menu-movie-player": "Open in player", 
 	"menu-movie-navigation": "Navigation sequences", 
+	"menu-movie-republish": "Republish movie files", 
 	"menu-movie-notes": "Design notes", 
 	
 	"window-login-title": "Login", 
@@ -369,6 +370,7 @@
 	"window-movieprop-input-swipeleft": "Touchscreen swipe from left", 
 	"window-movieprop-input-swipetop": "Touchscreen swipe from top", 
 	"window-movieprop-input-swipebottom": "Touchscreen swipe from bottom", 
+	"window-movieprop-input-touchhold": "Touch and hold (more than 1 second)", 
 	"window-movieprop-input-keyhome": "Keyboard home", 
 	"window-movieprop-input-keyend": "Keyboard end", 
 	"window-movieprop-input-mousemiddle": "Mouse middle button click", 
@@ -379,6 +381,7 @@
 	"window-movieprop-access": "Access", 
 	"window-movieprop-accessbt": "Set access options", 
 	"window-movieprop-accesslogin": "Require visitor login?",
+	"window-movieprop-encrypted": "Encrypt movie files?",
 	"window-movieprop-accessyes": "yes",
 	"window-movieprop-accessno": "no",
 	"window-movieprop-accessgroup": "Allowed visitor groups (ctrl+click to unselect/select several, none for free access)",
@@ -435,6 +438,14 @@
 	"window-movieseq-nolist": "Error while recovering the scenes list.",
 	"window-movieseq-error": "Error while creating the navigation sequence.",
 	"window-movieseq-created": "The navigation sequence was created.",
+	
+	"window-republish-title": "Republish movie files", 
+	"window-republish-about": "You can republish all your movie files if needed. Choose which version of the scenes to consider.", 
+	"window-republish-current": "use currently published scene versions", 
+	"window-republish-newest": "use the latest versions of scenes", 
+	"window-republish-button": "Republish movie files",
+	"window-republish-error": "Error while replublishing the movie files.", 
+	"window-republish-ok": "All movie files were replublished.", 
 	
 	"menu-scene-title": "Scene", 
 	"menu-scene-new": "New", 
@@ -676,9 +687,11 @@
 	
 	"menu-contraptions-title": "Contraptions", 
 	"menu-contraptions-cover": "Content cover", 
+	"menu-contraptions-background": "Backgrounds", 
 	"menu-contraptions-menus": "Menu layouts", 
 	"menu-contraptions-music": "Music", 
 	"menu-contraptions-forms": "Input Forms", 
+	"menu-contraptions-interfaces": "Interfaces", 
 	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
@@ -766,6 +779,22 @@
 	"window-contrcover-oksave": "The content covers were saved.",
 	"window-contrcover-add": "Add/update content cover",
 	
+	"window-contrbg-title": "Backgrounds",
+	"window-contrbg-registered": "Registered backgrounds",
+	"window-contrbg-load": "Load background",
+	"window-contrbg-remove": "Remove background",
+	"window-contrbg-name": "Background name",
+	"window-contrbg-properties": "Background properties",
+	"window-contrbg-landscape": "Landscape display background picture", 
+	"window-contrbg-portrait": "Portrait display background picture", 
+	"window-contrbg-save": "Save current background settings",
+	"window-contrbg-nographics": "You must set at least one of the background pictures.",
+	"window-contrbg-noname": "You must give the background a name with at least 3 characters.",
+	"window-contrbg-ersave": "Error while saving the backgrounds. Please try again.",
+	"window-contrbg-ersave1": "Your access level doesn't allow setting the backgrounds.",
+	"window-contrbg-oksave": "The background were saved.",
+	"window-contrbg-add": "Add/update background",
+	
 	"window-contrform-title": "Input forms",
 	"window-contrform-registered": "Registered input forms",
 	"window-contrform-load": "Load form",
@@ -781,7 +810,7 @@
 	"window-contrform-noelem": "You must add input elements to your form.",
 	"window-contrform-ersave": "Error while saving the input forms. Please try again.",
 	"window-contrform-ersave1": "Your access level doesn't allow setting the input forms.",
-	"window-contrform-oksave": "The inut forms were saved.",
+	"window-contrform-oksave": "The input forms were saved.",
 	"window-contrform-namebg": "background graphic (optional)",
 	"window-contrform-nameok": "submit button graphic",
 	"window-contrform-namecancel": "cancel button graphic (optional)",
@@ -804,6 +833,48 @@
 	"window-contrform-showtname": "The element name must have at least 3 characters.", 
 	"window-contrform-usedname": "The provided name is already used by another element.", 
 	
+	"window-contrinterf-title": "Interfaces",
+	"window-contrinterf-registered": "Registered interfaces",
+	"window-contrinterf-load": "Load interface",
+	"window-contrinterf-remove": "Remove interface",
+	"window-contrinterf-save": "Save current interfaces settings",
+	"window-contrinterf-name": "Interface name",
+	"window-contrinterf-add": "Add/update interface",
+	"window-contrinterf-elements": "Interface elements",
+	"window-contrinterf-background": "Background graphic (optional)", 
+	"window-contrinterf-setbutton": "Set element", 
+	"window-contrinterf-smap": "Animation setting (optional)", 
+	"window-contrinterf-smapac": "Animation click action (optional)", 
+	"window-contrinterf-formelposition": "Element position (relative to interface origin)", 
+	"window-contrinterf-formelrotation": "Element rotation (pivot on top-left corner)", 
+	"window-contrinterf-formelalpha": "Element opacity", 
+	"window-contrinterf-text": "Interface text (optional)", 
+	"window-contrinterf-use": "Use text interface?", 
+	"window-contrinterf-font": "Text font", 
+	"window-contrinterf-fontsize": "Font size", 
+	"window-contrinterf-fontcolor": "Text color (use hexadecimal values)", 
+	"window-contrinterf-fontdeco": "Text decoration", 
+	"window-contrinterf-fontdeco-normal": "normal", 
+	"window-contrinterf-fontdeco-bold": "bold", 
+	"window-contrinterf-fontdeco-italic": "italic", 
+	"window-contrinterf-fontdeco-bolditalic": "bold and italic", 
+	"window-contrinterf-fontalign": "Text alignment", 
+	"window-contrinterf-fontalign-left": "left", 
+	"window-contrinterf-fontalign-right": "right", 
+	"window-contrinterf-fontalign-center": "center", 
+	"window-contrinterf-width": "Text area width",
+	"window-contrinterf-elac": "Element click action", 
+	"window-contrinterf-eladd": "add element",
+	"window-contrinterf-elrem": "remove element",
+	"window-contrinterf-namebg": "background graphic (optional)",
+	"window-contrinterf-nameanim": "animated graphic (optional)",
+	"window-contrinterf-nametx": "text area (optional)",
+	"window-contrinterf-namebutton": "button graphic",
+	"window-contrinterf-noname": "You must give the interface a name with at least 3 characters.",
+	"window-contrinterf-btgraph": "Button element", 
+	"window-contrinterf-ersave": "Error while saving the interfaces. Please try again.",
+	"window-contrinterf-ersave1": "Your access level doesn't allow setting the interfaces.",
+	"window-contrinterf-oksave": "The interfaces were saved.",
 	
 	"window-contrmusic-title": "Music",
 	"window-contrmusic-registered": "Registered music tracks",
@@ -933,7 +1004,7 @@
 	"window-exchdesk-width": "Window original width",
 	"window-exchdesk-height": "Window original height",
 	"window-exchdesk-aboutnw": "The desktop applications are created using Electron JS.",
-	"window-exchdesk-buttonnw": "Visit the Elecntron JS site",
+	"window-exchdesk-buttonnw": "Visit the Electron JS site",
 	"window-exchdesk-icon": "App icon file (set at the movie properties)", 
 	"window-exchdesk-author": "App author (set at the movie properties)", 
 	"window-exchdesk-description": "App description (set at the movie properties)", 
@@ -1351,7 +1422,10 @@
 	"acinfo-hidemenu": "hide menus", 
 	"acinfo-showcover": "show content cover",
 	"acinfo-showcover-p1": "content cover name", 	
-	"acinfo-hidecover": "hide content covers", 
+	"acinfo-hidecover": "hide content covers",
+	"acinfo-showbg": "show background picture",
+	"acinfo-showbg-p1": "background name", 	
+	"acinfo-hidebg": "hide background picture",
 	"acinfo-showloading": "show loading icon", 
 	"acinfo-hideloading": "hide loading icon", 
 	"acinfo-musicplay": "play music track", 
@@ -1373,6 +1447,23 @@
 	"acinfo-setformstepper-p2": "minimum value", 
 	"acinfo-setformstepper-p3": "maximum value", 
 	"acinfo-setformstepper-p4": "step increase/decrease amount", 
+	"acinfo-showinterf": "show an interface",
+	"acinfo-showinterf-p1": "the interface name", 
+	"acinfo-showinterf-p2": "interface x position", 
+	"acinfo-showinterf-p3": "interface y position", 
+	"acinfo-hideinterf": "hide an interface",
+	"acinfo-hideinterf-p1": "the interface name", 
+	"acinfo-hideallinterf": "hide all interfaces",
+	"acinfo-interftext": "set an interface text",
+	"acinfo-interftext-p1": "the interface name", 
+	"acinfo-interftext-p2": "the text to display",
+	"acinfo-interfframe": "set an interface animation frame",
+	"acinfo-interfframe-p1": "the interface name", 
+	"acinfo-interfframe-p2": "the animation frame to display",
+	"acinfo-interfplay": "play an interface animation",
+	"acinfo-interfplay-p1": "the interface name", 
+	"acinfo-interfpause": "pause an interface animation",
+	"acinfo-interfpause-p1": "the interface name", 
 	
 	"placement-top": "top", 
 	"placement-topleft": "top left", 
@@ -1821,6 +1912,17 @@
 	"acinfo-systemopenurl": "open an URL on browser",
     "acinfo-systemopenurl-p1": "the URL to open",
 	"acinfo-systemquit": "end app execution (while on desktop app mode)",
+	"acinfo-systempwainstall": "prompt visitor for PWA installation",
+	"acinfo-systemifpwainstalled": "check if running from an installed PWA",
+	"acinfo-systemifhorizontal": "check if the display is horizontal",
+	"acinfo-systemifvertical": "check if the display is vertical",
+	"acinfo-systemifwebsite": "check if running on website export runtime",
+	"acinfo-systemifpwa": "check if running on PWA export runtime",
+	"acinfo-systemifdesktop": "check if running on desktop app export runtime",
+	"acinfo-systemifmobile": "check if running on mobile app export runtime",
+	"acinfo-systemifpublish": "check if running on publish services export runtime",
+	"acinfo-systemifplayer": "check if running on TilBuci player",
+	
 	"acinfo-systemsendevent": "send a custom event to player listeners",
     "acinfo-systemsendevent-p1": "event parameter (you may add more)",
 	"acinfo-systemsetkftime": "set the time between keyframes",
