--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -14,6 +14,7 @@
 	"uploader-spritemapname": "PNG picture files", 
 	"uploader-moviename": "Exported movie ZIP file", 
 	"uploader-embedname": "HTML5 embed ZIP file", 
+	"uploader-stringsname": "JSON text file", 
 	"uploader-videoname": "Video files", 
 	"uploader-audioname": "Audio files", 
 	"uploader-htmlname": "HTML files", 
@@ -23,6 +24,7 @@
     "leftbar-scene": "Scene",
     "leftbar-media": "Media",
 	"leftbar-contraptions": "Contraptions",
+	"leftbar-narrative": "Narrative",
 	"leftbar-exchange": "Exchange",
 	"leftbar-keyframe": "Keyframes",
 	"leftbar-visitors": "Visitors",
@@ -693,6 +695,11 @@
 	"menu-contraptions-forms": "Input Forms", 
 	"menu-contraptions-interfaces": "Interfaces", 
 	
+	"menu-narrative-title": "Narrative", 
+	"menu-narrative-characters": "Characters", 
+	"menu-narrative-dialogues": "Dialogues", 
+	"menu-narrative-dtree": "Decision tree", 
+	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
 	"window-kfmanage-remove": "Remove selected",
@@ -778,6 +785,24 @@
 	"window-contrcover-ersave1": "Your access level doesn't allow setting the content covers.",
 	"window-contrcover-oksave": "The content covers were saved.",
 	"window-contrcover-add": "Add/update content cover",
+	
+	"window-narrchar-title": "Characters",
+	"window-narrchar-registered": "Registered characters",
+	"window-narrchar-load": "Load character",
+	"window-narrchar-remove": "Remove character",
+	"window-narrchar-id": "Character ID",
+	"window-narrchar-add": "Add/update character",
+	"window-narrchar-properties": "Character properties",
+	"window-narrchar-name": "Character name",
+	"window-narrchar-about": "About the character",
+	"window-narrchar-collection": "Media collection",
+	"window-narrchar-save": "Save current characters settings",
+	"window-narrchar-noid": "You must provide an id with at least 3 characters.",
+	"window-narrchar-noname": "Your character must have a name.",
+	"window-narrchar-ersave": "Error while saving the characters information. Please try again.",
+	"window-narrchar-ersave1": "Your access level doesn't allow setting the characters information.",
+	"window-narrchar-oksave": "The characters information was saved.",
+	"window-narrchar-nolist": "Error while loading the media collections information.",
 	
 	"window-contrbg-title": "Backgrounds",
 	"window-contrbg-registered": "Registered backgrounds",
@@ -903,7 +928,8 @@
 	"menu-media-spritemap": "Spritemap", 
 	"menu-media-text": "Text", 
 	"menu-media-video": "Video", 
-	"menu-media-embed": "Embed", 
+	"menu-media-embed": "HTML5 Embed", 
+	"menu-media-strings": "String files", 
 	
 	"menu-exhange-title": "Exchange data", 
 	"menu-exchange-export": "Export current movie", 
@@ -1047,6 +1073,7 @@
 	"window-media-addsingle": "Select file",
 	"window-media-addstageer": "Error while adding the media to the stage.",
 	"window-media-upload": "Upload a file",
+	"window-media-download": "Download selected file",
 	"window-media-uploader": "Error while uploading the file. Please try again.",
 	"window-media-uplevel": "Up one level",
 	"window-media-newfolder": "Create a folder",
@@ -1126,6 +1153,8 @@
 	"window-collection-astbackcancel": "Ignore changes", 
 	
 	"window-mdpicture-title": "Picture manager",
+	
+	"window-mdstrings-title": "String files",
 	
 	"window-mdspritemap-title": "Spritemap manager",
 	"window-mdspritemap-loaderror": "Error while loading the spritemap file.", 
@@ -1970,6 +1999,8 @@
 	"acinfo-stringsetglobal": "set a global text",
     "acinfo-stringsetglobal-p1": "the global text name",
 	"acinfo-stringsetglobal-p2": "the value",
+	"acinfo-stringsload": "load a string file", 
+	"acinfo-stringsload-p1": "the string file name (just name, without .json extension)", 
 	"acinfo-stringsetgroup": "set a strings group for strings.json",
     "acinfo-stringsetgroup-p1": "the strings.json group to use",
 	"acinfo-stringtofloat": "convert a string to a float value",
