--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -804,6 +804,45 @@
 	"window-narrchar-oksave": "The characters information was saved.",
 	"window-narrchar-nolist": "Error while loading the media collections information.",
 	
+	"window-narrdiag-title": "Dialogues",
+	"window-narrdiag-folders": "Groups",
+	"window-narrdiag-add": "Add", 
+	"window-narrdiag-rename": "Rename", 
+	"window-narrdiag-remove": "Remove", 
+	"window-narrdiag-foldername": "Name", 
+	"window-narrdiag-fdialogs": "Group dialogues", 
+	"window-narrdiag-dialoguesname": "Name", 
+	"window-narrdiag-ersave": "Error while saving the dialogues information. Please try again.",
+	"window-narrdiag-ersave1": "Your access level doesn't allow setting the dialogues information.",
+	"window-narrdiag-oksave": "The dialogues information was saved.",
+	"window-narrdiag-save": "Save current dialogue settings",
+	"window-narrdiag-fdnamesmall": "The dialogue group name must contain at least 3 characters.",
+	"window-narrdiag-fdnamealready": "A dialogue group with the set name already exists.", 
+	"window-narrdiag-fdnoselect": "You must select a dialogue group first.", 
+	"window-narrdiag-fdhavediags": "The group set for removal still contains dialogues.", 
+	"window-narrdiag-dgnamesmall": "The dialogue name must contain at least 3 characters.",
+	"window-narrdiag-dgnamealready": "A dialogue with the same name already exists in the selected group.", 
+	"window-narrdiag-dgnoselect": "You must select a dialogue first.", 
+	"window-narrdiag-dghavelines": "The dialogue set for removal still contains lines.", 
+	"window-narrdiag-navinstances": "Navigation instance names", 
+	"window-narrdiag-navprev": "Previous button", 
+	"window-narrdiag-navnext": "Next button", 
+	"window-narrdiag-navend": "End button", 
+	"window-narrdiag-outinstances": "Display instance names", 
+	"window-narrdiag-insttext": "Text line", 
+	"window-narrdiag-instname": "Character name", 
+	"window-narrdiag-instexpr": "Character graphic", 
+	"window-narrdiag-savediag": "Save dialogue updates", 
+	"window-narrdiag-lines": "Dialogue lines", 
+	"window-narrdiag-character": "Character", 
+	"window-narrdiag-asset": "Expression", 
+	"window-narrdiag-audio": "Audio", 
+	"window-narrdiag-text": "Text", 
+	"window-narrdiag-lineadd": "Add a line", 
+	"window-narrdiag-lineedit": "Update selected line", 
+	"window-narrdiag-nolist": "Error while loading the media collections information.",
+	"window-narrdiag-none": "none",
+	
 	"window-contrbg-title": "Backgrounds",
 	"window-contrbg-registered": "Registered backgrounds",
 	"window-contrbg-load": "Load background",
