--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -31,6 +31,7 @@
 	"leftbar-setup": "Setup",
     "leftbar-fullscreen": "Fullscreen",
 	"leftbar-toggle": "Toggle",
+	"leftbar-workspace": "+ Workspace",
 	
 	"rightbar-instances": "Instances", 
 	"rightbar-properties": "Placement", 
@@ -1775,6 +1776,24 @@
 	"acinfo-inputsetpassword": "set a text input password mask display", 
 	"acinfo-inputsetpassword-p1": "the input name", 
 	"acinfo-inputsetpassword-p2": "show as password?",	
+	"acinfo-inputaddtarea": "add a text area to the screen", 
+	"acinfo-inputaddtarea-p1": "the text area name", 
+	"acinfo-inputaddtarea-p2": "x position", 
+	"acinfo-inputaddtarea-p3": "y position", 
+	"acinfo-inputaddtarea-p4": "width", 
+	"acinfo-inputaddtarea-p5": "height", 
+	"acinfo-inputplacetarea": "set a text area size and position", 
+	"acinfo-inputplacetarea-p1": "the text area name", 
+	"acinfo-inputplacetarea-p2": "x position", 
+	"acinfo-inputplacetarea-p3": "y position", 
+	"acinfo-inputplacetarea-p4": "width", 
+	"acinfo-inputplacetarea-p5": "height", 
+	"acinfo-inputremovetarea": "remove a text area", 
+	"acinfo-inputremovetarea-p1": "the text area name", 
+	"acinfo-inputremovealltareas": "remove all text areas", 
+	"acinfo-inputsettextarea": "set the content of a text area", 
+	"acinfo-inputsettextarea-p1": "the text area name", 
+	"acinfo-inputsettextarea-p2": "the text to set",
 	"acinfo-inputaddnumeric": "add a numeric input to the screen", 
 	"acinfo-inputaddnumeric-p1": "the input name", 
 	"acinfo-inputaddnumeric-p2": "the initial value", 
