--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -14,6 +14,7 @@
 	"uploader-spritemapname": "PNG picture files", 
 	"uploader-moviename": "Exported movie ZIP file", 
 	"uploader-embedname": "HTML5 embed ZIP file", 
+	"uploader-stringsname": "JSON text file", 
 	"uploader-videoname": "Video files", 
 	"uploader-audioname": "Audio files", 
 	"uploader-htmlname": "HTML files", 
@@ -23,12 +24,14 @@
     "leftbar-scene": "Scene",
     "leftbar-media": "Media",
 	"leftbar-contraptions": "Contraptions",
+	"leftbar-narrative": "Narrative",
 	"leftbar-exchange": "Exchange",
 	"leftbar-keyframe": "Keyframes",
 	"leftbar-visitors": "Visitors",
 	"leftbar-setup": "Setup",
     "leftbar-fullscreen": "Fullscreen",
 	"leftbar-toggle": "Toggle",
+	"leftbar-workspace": "+ Workspace",
 	
 	"rightbar-instances": "Instances", 
 	"rightbar-properties": "Placement", 
@@ -693,6 +696,11 @@
 	"menu-contraptions-forms": "Input Forms", 
 	"menu-contraptions-interfaces": "Interfaces", 
 	
+	"menu-narrative-title": "Narrative", 
+	"menu-narrative-characters": "Characters", 
+	"menu-narrative-dialogues": "Dialogues", 
+	"menu-narrative-dtree": "Decision tree", 
+	
 	"window-kfmanage-title": "Scene keyframes",
 	"window-kfmanage-keyframes": "Keyframes",
 	"window-kfmanage-remove": "Remove selected",
@@ -778,6 +786,63 @@
 	"window-contrcover-ersave1": "Your access level doesn't allow setting the content covers.",
 	"window-contrcover-oksave": "The content covers were saved.",
 	"window-contrcover-add": "Add/update content cover",
+	
+	"window-narrchar-title": "Characters",
+	"window-narrchar-registered": "Registered characters",
+	"window-narrchar-load": "Load character",
+	"window-narrchar-remove": "Remove character",
+	"window-narrchar-id": "Character ID",
+	"window-narrchar-add": "Add/update character",
+	"window-narrchar-properties": "Character properties",
+	"window-narrchar-name": "Character name",
+	"window-narrchar-about": "About the character",
+	"window-narrchar-collection": "Media collection",
+	"window-narrchar-save": "Save current characters settings",
+	"window-narrchar-noid": "You must provide an id with at least 3 characters.",
+	"window-narrchar-noname": "Your character must have a name.",
+	"window-narrchar-ersave": "Error while saving the characters information. Please try again.",
+	"window-narrchar-ersave1": "Your access level doesn't allow setting the characters information.",
+	"window-narrchar-oksave": "The characters information was saved.",
+	"window-narrchar-nolist": "Error while loading the media collections information.",
+	
+	"window-narrdiag-title": "Dialogues",
+	"window-narrdiag-folders": "Groups",
+	"window-narrdiag-add": "Add", 
+	"window-narrdiag-rename": "Rename", 
+	"window-narrdiag-remove": "Remove", 
+	"window-narrdiag-foldername": "Name", 
+	"window-narrdiag-fdialogs": "Group dialogues", 
+	"window-narrdiag-dialoguesname": "Name", 
+	"window-narrdiag-ersave": "Error while saving the dialogues information. Please try again.",
+	"window-narrdiag-ersave1": "Your access level doesn't allow setting the dialogues information.",
+	"window-narrdiag-oksave": "The dialogues information was saved.",
+	"window-narrdiag-save": "Save current dialogue settings",
+	"window-narrdiag-fdnamesmall": "The dialogue group name must contain at least 3 characters.",
+	"window-narrdiag-fdnamealready": "A dialogue group with the set name already exists.", 
+	"window-narrdiag-fdnoselect": "You must select a dialogue group first.", 
+	"window-narrdiag-fdhavediags": "The group set for removal still contains dialogues.", 
+	"window-narrdiag-dgnamesmall": "The dialogue name must contain at least 3 characters.",
+	"window-narrdiag-dgnamealready": "A dialogue with the same name already exists in the selected group.", 
+	"window-narrdiag-dgnoselect": "You must select a dialogue first.", 
+	"window-narrdiag-dghavelines": "The dialogue set for removal still contains lines.", 
+	"window-narrdiag-navinstances": "Navigation instance names", 
+	"window-narrdiag-navprev": "Previous button", 
+	"window-narrdiag-navnext": "Next button", 
+	"window-narrdiag-navend": "End button", 
+	"window-narrdiag-outinstances": "Display instance names", 
+	"window-narrdiag-insttext": "Text line", 
+	"window-narrdiag-instname": "Character name", 
+	"window-narrdiag-instexpr": "Character graphic", 
+	"window-narrdiag-savediag": "Save dialogue updates", 
+	"window-narrdiag-lines": "Dialogue lines", 
+	"window-narrdiag-character": "Character", 
+	"window-narrdiag-asset": "Expression", 
+	"window-narrdiag-audio": "Audio", 
+	"window-narrdiag-text": "Text", 
+	"window-narrdiag-lineadd": "Add a line", 
+	"window-narrdiag-lineedit": "Update selected line", 
+	"window-narrdiag-nolist": "Error while loading the media collections information.",
+	"window-narrdiag-none": "none",
 	
 	"window-contrbg-title": "Backgrounds",
 	"window-contrbg-registered": "Registered backgrounds",
@@ -903,7 +968,8 @@
 	"menu-media-spritemap": "Spritemap", 
 	"menu-media-text": "Text", 
 	"menu-media-video": "Video", 
-	"menu-media-embed": "Embed", 
+	"menu-media-embed": "HTML5 Embed", 
+	"menu-media-strings": "String files", 
 	
 	"menu-exhange-title": "Exchange data", 
 	"menu-exchange-export": "Export current movie", 
@@ -1047,6 +1113,7 @@
 	"window-media-addsingle": "Select file",
 	"window-media-addstageer": "Error while adding the media to the stage.",
 	"window-media-upload": "Upload a file",
+	"window-media-download": "Download selected file",
 	"window-media-uploader": "Error while uploading the file. Please try again.",
 	"window-media-uplevel": "Up one level",
 	"window-media-newfolder": "Create a folder",
@@ -1126,6 +1193,8 @@
 	"window-collection-astbackcancel": "Ignore changes", 
 	
 	"window-mdpicture-title": "Picture manager",
+	
+	"window-mdstrings-title": "String files",
 	
 	"window-mdspritemap-title": "Spritemap manager",
 	"window-mdspritemap-loaderror": "Error while loading the spritemap file.", 
@@ -1707,6 +1776,24 @@
 	"acinfo-inputsetpassword": "set a text input password mask display", 
 	"acinfo-inputsetpassword-p1": "the input name", 
 	"acinfo-inputsetpassword-p2": "show as password?",	
+	"acinfo-inputaddtarea": "add a text area to the screen", 
+	"acinfo-inputaddtarea-p1": "the text area name", 
+	"acinfo-inputaddtarea-p2": "x position", 
+	"acinfo-inputaddtarea-p3": "y position", 
+	"acinfo-inputaddtarea-p4": "width", 
+	"acinfo-inputaddtarea-p5": "height", 
+	"acinfo-inputplacetarea": "set a text area size and position", 
+	"acinfo-inputplacetarea-p1": "the text area name", 
+	"acinfo-inputplacetarea-p2": "x position", 
+	"acinfo-inputplacetarea-p3": "y position", 
+	"acinfo-inputplacetarea-p4": "width", 
+	"acinfo-inputplacetarea-p5": "height", 
+	"acinfo-inputremovetarea": "remove a text area", 
+	"acinfo-inputremovetarea-p1": "the text area name", 
+	"acinfo-inputremovealltareas": "remove all text areas", 
+	"acinfo-inputsettextarea": "set the content of a text area", 
+	"acinfo-inputsettextarea-p1": "the text area name", 
+	"acinfo-inputsettextarea-p2": "the text to set",
 	"acinfo-inputaddnumeric": "add a numeric input to the screen", 
 	"acinfo-inputaddnumeric-p1": "the input name", 
 	"acinfo-inputaddnumeric-p2": "the initial value", 
@@ -1970,6 +2057,8 @@
 	"acinfo-stringsetglobal": "set a global text",
     "acinfo-stringsetglobal-p1": "the global text name",
 	"acinfo-stringsetglobal-p2": "the value",
+	"acinfo-stringsload": "load a string file", 
+	"acinfo-stringsload-p1": "the string file name (just name, without .json extension)", 
 	"acinfo-stringsetgroup": "set a strings group for strings.json",
     "acinfo-stringsetgroup-p1": "the strings.json group to use",
 	"acinfo-stringtofloat": "convert a string to a float value",
