--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -553,6 +553,12 @@
 	"window-contraptions-title": "Contraption actions", 
 	"window-contraptions-list": "Avaliable contraption actions", 
 	
+	"window-narrative-title": "Narrative actions", 
+	"window-narrative-list": "Avaliable narrative actions", 
+	
+	"window-runtime-title": "Runtime actions", 
+	"window-runtime-list": "Avaliable runtime actions", 
+	
 	"window-acinstance-title": "Instance actions", 
 	"window-acinstance-current": "Current keyframe instances", 
 	"window-acinstance-property": "Property", 
@@ -845,6 +851,10 @@
 	"window-narrdiag-lineedit": "Update selected line", 
 	"window-narrdiag-nolist": "Error while loading the media collections information.",
 	"window-narrdiag-none": "none",
+	"window-narrdiag-erloadfolder": "Error while loading the group contents. Please try again.",
+	"window-narrdiag-haschange": "You have made changes to the information about the current dialogue.",
+	"window-narrdiag-haschangekeep": "Keep changes and proceed",
+	"window-narrdiag-haschangediscard": "Discard changes",
 	
 	"window-contrbg-title": "Backgrounds",
 	"window-contrbg-registered": "Registered backgrounds",
@@ -1489,6 +1499,28 @@
 	"acblock-parambool": " must be a boolean value.", 
 	"acblock-paramstring": " must be a string value.", 
 	"acblock-paramvariable": " must be a variable name starting with $, # or ?.", 
+	
+	"window-acbnarrative-title": "Narrative", 
+	"acinfo-diagloadgroup": "load dialogue group", 
+	"acinfo-diagloadgroup-p1": "group name", 
+	"acinfo-diagstart": "start a dialogue display", 
+	"acinfo-diagstart-p1": "dialogue name (from currently loaded gorup)", 
+	"acinfo-diagnext": "show the next dialogue text line", 
+	"acinfo-diagprevious": "show the previous dialogue text line", 
+	"acinfo-diaglast": "show the last dialogue text line", 
+	"acinfo-diagfirst": "show the first dialogue text line", 
+	"acinfo-diagclose": "closes the current dialogue", 
+	
+	"window-acbruntime-title": "Runtime", 
+	"acinfo-runinstall": "install as an application", 
+	"acinfo-runquit": "close runtime", 
+	"acinfo-runbrowser": "running content from a browser?", 
+	"acinfo-runsavedata": "save all variables values",
+	"acinfo-runsavedata-p1": "save file name",
+	"acinfo-runloaddata": "load variable values",
+	"acinfo-runloaddata-p1": "variables file name",
+	"acinfo-runifdataexist": "does a variables data file exist?", 
+	"acinfo-runifdataexist-p1": "variables file name",
 	
 	"window-acbcontraptions-title": "Contraptions", 
 	"acinfo-showmenu": "show menu", 
@@ -2146,6 +2178,7 @@
 	"tooltip-action-plus": "additional actions like system and timers", 
 	"tooltip-action-plugin": "actions provided by plugins", 
 	"tooltip-action-contraptions": "contraptions actions", 
+	"tooltip-action-narrative": "narrative actions", 
 	"tooltip-movie-remove": "only available when no movie is loaded", 
 	"tooltip-movie-nolevel": "your access level doesn't allow movie handling", 
 	"tooltip-movie-noowner": "you are not the owner of the current movie", 
