--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -990,7 +990,7 @@
 	"menu-exchange-pwa": "Save PWA application", 
 	"menu-exchange-publish": "Save for publish services\n(itch.io, Game Jolt, etc)", 
 	"menu-exchange-desktop": "Export for desktop\nWindows, Linux or macOS", 
-	"menu-exchange-cordova": "Create Android/iOS app\n(Apache Cordova project)", 
+	"menu-exchange-cordova": "Mobile Android and\niOS/iPadOS app", 
 	"menu-exchange-import": "Import a movie", 
 	
 	"window-exchexport-title": "Movie export", 
@@ -1067,7 +1067,7 @@
 	"window-exchpub-ok": "Your movie was exported. Please wait for the download to begin. You can also download the zip file from  the export folder of your TilBuci installation server.", 
 	
 	"window-exchdesk-title": "Save movie as a desktop app",
-	"window-exchdesk-about": "You can export your movie as an ElectronJS project to create a desktop application for Windows, Linux or macOS systems, just fill the form values. You can use the system.quit action to close yout application - this is important if you are creating a fullscreen or kiosk application. After the project is creted, TilBuci will start downloading a zip file. Please check out the included readme.txt file for further instructions. Desktop applications require some movie information like the icon, the author and a description.",
+	"window-exchdesk-about": "You can export your movie as an Electron project to create a desktop application for Windows, Linux or macOS systems, just fill the form values. You can use the runtime.quit action to close your application - this is important if you are creating a fullscreen or kiosk application. After the project is creted, TilBuci will start downloading a zip file. Please check out the included readme.html file for further instructions. Desktop applications require some movie information like the icon, the author and a description.",
 	"window-exchdesk-error": "Error while exporting your application. Please try again.",
 	"window-exchdesk-ok": "Your application was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TilBuci installation server. Please check out the included readme.txt file for further instructions.", 
 	"window-exchdesk-button": "Create the app",
@@ -1081,30 +1081,35 @@
 	"window-exchdesk-windowkiosk": "Kiosk (fullscreen, keeping focus)",
 	"window-exchdesk-width": "Window original width",
 	"window-exchdesk-height": "Window original height",
-	"window-exchdesk-aboutnw": "The desktop applications are created using Electron JS.",
-	"window-exchdesk-buttonnw": "Visit the Electron JS site",
-	"window-exchdesk-icon": "App icon file (set at the movie properties)", 
+	"window-exchdesk-aboutnw": "The desktop applications are created using Electron.",
+	"window-exchdesk-buttonnw": "Visit the Electron site",
+	"window-exchdesk-icon": "App icon file (set at the movie properties - prefer PNG images sized 1024x1024 pixels)", 
 	"window-exchdesk-author": "App author (set at the movie properties)", 
 	"window-exchdesk-description": "App description (set at the movie properties)", 
 	"window-exchdesk-errormiss": "You must provide the author name, the description and the favicon at the movie properties window.", 
 	
 	"window-exchcord-title": "Export mobile app",
-	"window-exchcord-about": "TilBuci uses the Apache Cordova project to enable the creation of mobile apps for Android and iOS/iPadOS. If this is the first time you are creating an app for the current movie, please export the complete project. If you already have an app, select the update project below. The exported ZIP file contains further instructions about setting up the Apache Cordova and creating/distributing your application. This window form values are used only on complete project export.",
+	"window-exchcord-about": "TilBuci uses the Capacitor project to enable the creation of mobile apps for Android and iOS/iPadOS. The exported ZIP file contains further instructions about setting up Capacitor and creating/distributing your application.",
 	"window-exchcord-export": "Export mode", 
-	"window-exchcord-complete": "complete Apache Cordova project", 
+	"window-exchcord-complete": "complete Capacitor project", 
 	"window-exchcord-update": "content update (for previously exported project)", 
 	"window-exchcord-appid": "App ID", 
 	"window-exchcord-appsite": "App reference site", 
 	"window-exchcord-appauthor": "App author", 
 	"window-exchcord-appemail": "Author e-mail", 
 	"window-exchcord-applicense": "App license", 
-	"window-exchcord-fullscr": "Display on fullscreen (no status bar)?", 
-	"window-exchcord-icon": "App icon (use a 512x512 pixels PNG file)", 
+	"window-exchcord-fullscr": "Display mode", 
+	"window-exchcord-fullscr-normal": "normal (visible status and navigation bars)", 
+	"window-exchcord-fullscr-full": "fullscreen (hidden status bar)", 
+	"window-exchcord-fullscr-kiosk": "kiosk (no status or navigation bars - Android only)", 
+	"window-exchcord-icon": "App icon (use a 1024x1024 pixel PNG file preferably)", 
 	"window-exchcord-button": "Export application", 
-	"window-exchcord-aboutcord": "The mobile apps are created using Apache Cordova.", 
-	"window-exchcord-buttoncord": "Visit the Apache Cordova site", 
+	"window-exchcord-aboutcord": "The mobile apps are created using Capacitor.", 
+	"window-exchcord-buttoncord": "Visit the Capacitor website", 
 	"window-exchcord-error": "Error while exporting your project. Please try again.",
 	"window-exchcord-ok": "Your project was exported. Please wait for the download to begin. You can also download the zip file from the export folder of your TilBuci installation server.", 
+	"window-exchcord-noappid": "You must provide an identifier for your app (usually in the format site.movieid).", 
+	"window-exchcord-noappicon": "You must specify an icon file (preferably a 1024x1024 pixel PNG).", 
 	
 	"window-media-file": "Files",
 	"window-media-preview": "Preview",
@@ -1876,6 +1881,15 @@
 	"acinfo-inputinverttoggle": "invert a toggle input value", 
 	"acinfo-inputinverttoggle-p1": "the input name", 
 	
+	"acinfo-targetshow": "show interaction target", 
+	"acinfo-targethide": "hide interaction target", 
+	"acinfo-targettoggle": "toggle interaction target display", 
+	"acinfo-targetsetposition": "set the target display position", 
+	"acinfo-targetsetposition=p1": "x position", 
+	"acinfo-targetsetposition=p2": "y position", 
+	
+	"acinfo-mousehide": "hide the mouse cursor", 
+	"acinfo-mouseshow": "show the mouse cursor", 
 	
 	"window-acbinstance-title": "Instance manipulation", 
 	"acinfo-instancenext": "load next collection element", 
