--- a/app/Assets/language/default.json
+++ b/app/Assets/language/default.json
@@ -363,14 +363,15 @@
 	"window-movieprop-input-opprevkf": "load previous keyframe", 
 	"window-movieprop-input-opfirstkf": "load first keyframe", 
 	"window-movieprop-input-oplastkf": "load last keyframe", 
-	"window-movieprop-input-keyup": "Keyboard arrow up", 
-	"window-movieprop-input-keydown": "Keyboard arrow down", 
-	"window-movieprop-input-keyletf": "Keyboard arrow left", 
-	"window-movieprop-input-keyright": "Keyboard arrow right", 
-	"window-movieprop-input-keypup": "Keyboard page up", 
-	"window-movieprop-input-keypdown": "Keyboard page down", 
-	"window-movieprop-input-keyspace": "Keyboard space bar", 
-	"window-movieprop-input-keyenter": "Keyboard enter", 
+	"window-movieprop-input-optarget": "toggle target display", 
+	"window-movieprop-input-keyup": "Keyboard arrow up or Gamepad up", 
+	"window-movieprop-input-keydown": "Keyboard arrow down or Gamepad down", 
+	"window-movieprop-input-keyleft": "Keyboard arrow left or Gamepad left", 
+	"window-movieprop-input-keyright": "Keyboard arrow right or Gamepad right", 
+	"window-movieprop-input-keypup": "Keyboard page up or Gamepad button 2", 
+	"window-movieprop-input-keypdown": "Keyboard page down or Gamepad button 3", 
+	"window-movieprop-input-keyspace": "Keyboard space bar or Gamepad button 0", 
+	"window-movieprop-input-keyenter": "Keyboard enter or Gamepad button 1", 
 	"window-movieprop-input-swiperight": "Touchscreen swipe from right", 
 	"window-movieprop-input-swipeleft": "Touchscreen swipe from left", 
 	"window-movieprop-input-swipetop": "Touchscreen swipe from top", 
