--- a/server/public_html/app/assets/language/default.json
+++ b/server/public_html/app/assets/language/default.json
@@ -363,14 +363,15 @@
 	"window-movieprop-input-opprevkf": "load previous keyframe", 
 	"window-movieprop-input-opfirstkf": "load first keyframe", 
 	"window-movieprop-input-oplastkf": "load last keyframe", 
-	"window-movieprop-input-keyup": "Keyboard arrow up", 
-	"window-movieprop-input-keydown": "Keyboard arrow down", 
-	"window-movieprop-input-keyletf": "Keyboard arrow left", 
-	"window-movieprop-input-keyright": "Keyboard arrow right", 
-	"window-movieprop-input-keypup": "Keyboard page up", 
-	"window-movieprop-input-keypdown": "Keyboard page down", 
-	"window-movieprop-input-keyspace": "Keyboard space bar", 
-	"window-movieprop-input-keyenter": "Keyboard enter", 
+	"window-movieprop-input-optarget": "toggle target display", 
+	"window-movieprop-input-keyup": "Keyboard arrow up or Gamepad up", 
+	"window-movieprop-input-keydown": "Keyboard arrow down or Gamepad down", 
+	"window-movieprop-input-keyleft": "Keyboard arrow left or Gamepad left", 
+	"window-movieprop-input-keyright": "Keyboard arrow right or Gamepad right", 
+	"window-movieprop-input-keypup": "Keyboard page up or Gamepad button 2", 
+	"window-movieprop-input-keypdown": "Keyboard page down or Gamepad button 3", 
+	"window-movieprop-input-keyspace": "Keyboard space bar or Gamepad button 0", 
+	"window-movieprop-input-keyenter": "Keyboard enter or Gamepad button 1", 
 	"window-movieprop-input-swiperight": "Touchscreen swipe from right", 
 	"window-movieprop-input-swipeleft": "Touchscreen swipe from left", 
 	"window-movieprop-input-swipetop": "Touchscreen swipe from top", 
@@ -703,6 +704,7 @@
 	"menu-contraptions-music": "Music", 
 	"menu-contraptions-forms": "Input Forms", 
 	"menu-contraptions-interfaces": "Interfaces", 
+	"menu-contraptions-targets": "Targets", 
 	
 	"menu-narrative-title": "Narrative", 
 	"menu-narrative-characters": "Characters", 
@@ -871,6 +873,23 @@
 	"window-contrbg-ersave1": "Your access level doesn't allow setting the backgrounds.",
 	"window-contrbg-oksave": "The background were saved.",
 	"window-contrbg-add": "Add/update background",
+	
+	"window-contrtr-title": "Targets",
+	"window-contrtr-registered": "Registered targets",
+	"window-contrtr-load": "Load target",
+	"window-contrtr-remove": "Remove target",
+	"window-contrtr-name": "Target name",
+	"window-contrtr-add": "Add/update target",
+	"window-contrtr-save": "Save current target settings",
+	"window-contrtr-nographics": "You must set at least the default target picture.",
+	"window-contrtr-noname": "You must give the target a name with at least 3 characters.",
+	"window-contrtr-ersave": "Error while saving the targets. Please try again.",
+	"window-contrtr-ersave1": "Your access level doesn't allow setting the targets.",
+	"window-contrtr-oksave": "The targets were saved.",
+	"window-contrtr-default": "Default picture", 
+	"window-contrtr-menus": "Picture for menus", 
+	"window-contrtr-interf": "Picture for interfaces", 
+	"window-contrtr-inst": "Picture for instances with names starting with", 
 	
 	"window-contrform-title": "Input forms",
 	"window-contrform-registered": "Registered input forms",
@@ -1885,8 +1904,11 @@
 	"acinfo-targethide": "hide interaction target", 
 	"acinfo-targettoggle": "toggle interaction target display", 
 	"acinfo-targetsetposition": "set the target display position", 
-	"acinfo-targetsetposition=p1": "x position", 
-	"acinfo-targetsetposition=p2": "y position", 
+	"acinfo-targetsetposition-p1": "x position", 
+	"acinfo-targetsetposition-p2": "y position", 
+	"acinfo-targetclear": "clear target custom picture", 
+	"acinfo-targetset": "set custom target", 
+	"acinfo-targetset-p1": "target name", 
 	
 	"acinfo-mousehide": "hide the mouse cursor", 
 	"acinfo-mouseshow": "show the mouse cursor", 
